--- a/src/main/app/mule-app.properties
+++ b/src/main/app/mule-app.properties
@@ -3,3 +3,4 @@
 box.clientId=565q6dmwyl105bwcm8pf7pkaudt0sh5z
 box.clientSecret=Ib3YDWNs9JJCP0e9hc9VnMzFg8iDqH7D
 box.accessTokenID=tmotley@mulesoft.com
+host=localhost
