externalized security credentials from flow

--- a/src/main/app/mule-app.properties
+++ b/src/main/app/mule-app.properties
@@ -3,4 +3,10 @@
 box.clientId=565q6dmwyl105bwcm8pf7pkaudt0sh5z
 box.clientSecret=Ib3YDWNs9JJCP0e9hc9VnMzFg8iDqH7D
 box.accessTokenID=tmotley@mulesoft.com
-host=localhost
+http.port=8080
+remote.port=8080
+fullDomain=localhost
+ns.pswd=Mul3NetSuite
+ns.acct=TSTDRV917625
+ns.role=3
+ns.email=netsuite.sandbox@mulesoft.com
