removed listen flow to separate flow file for cleanliness

--- a/src/main/app/mule-app.properties
+++ b/src/main/app/mule-app.properties
@@ -1,11 +1,12 @@
-#** GENERATED CONTENT ** Mule Custom Properties file.
-#Fri May 10 16:34:14 PDT 2013
+# Box
 box.clientId=565q6dmwyl105bwcm8pf7pkaudt0sh5z
 box.clientSecret=Ib3YDWNs9JJCP0e9hc9VnMzFg8iDqH7D
 box.accessTokenID=tmotley@mulesoft.com
+# CloudHub
 http.port=8080
 remote.port=8080
 fullDomain=localhost
+# NetSuite
 ns.pswd=Mul3NetSuite
 ns.acct=TSTDRV917625
 ns.role=3
