--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,5 +1,5 @@
-#Fri May 10 16:34:44 PDT 2013
+#Thu May 16 11:19:27 PDT 2013
 redeployment.enabled=true
 encoding=UTF-8
+config.resources=box-to-netsuite.xml,listen-to-box.xml
 domain=default
-config.resources=box-to-netsuite.xml
