--- a/src/main/app/mule-app.properties
+++ b/src/main/app/mule-app.properties
@@ -1,13 +1,1 @@
-# Box
-box.clientId=565q6dmwyl105bwcm8pf7pkaudt0sh5z
-box.clientSecret=Ib3YDWNs9JJCP0e9hc9VnMzFg8iDqH7D
-box.accessTokenID=tmotley@mulesoft.com
-# CloudHub
-http.port=8080
-remote.port=8080
-fullDomain=localhost
-# NetSuite
-ns.pswd=Mul3NetSuite
-ns.acct=TSTDRV917625
-ns.role=3
-ns.email=netsuite.sandbox@mulesoft.com
+# not included for security reasons
